Closed Bug 1979533 Opened 9 months ago Closed 8 months ago

CSS zoom for pseudo-element's images is applied twice

Categories

(Core :: CSS Parsing and Computation, defect)

Firefox 140
defect

Tracking

()

RESOLVED FIXED
143 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- wontfix
firefox-esr140 --- wontfix
firefox141 --- wontfix
firefox142 --- wontfix
firefox143 --- fixed

People

(Reporter: ntrrgc, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Steps to reproduce:

Here is the code for the repro:

<!DOCTYPE html>
<html>
<head>
<title>CSS zoom ::before image</title>
</head>
<body>

<div class="icon"></div>
<div class="icon zoom"></div>

<style>
.icon {
width: 400px;
height: 400px;
background-color: rgb(225, 223, 214);
margin-right: 5px;
display: inline-block;
vertical-align: top;
}
.icon::before {
display: block;
content: url(icon.png);
width: 100px;
height: 100px;
background-color: rgb(239, 215, 152);
}
.zoom::before {
zoom: 2;
}
</style>

</body>
</html>

Actual results:

The image in the second div::before is scaled to 4 times its size.

Expected results:

The image in the second div::before should have been scaled to 2 times its size.

Blocks: csszoom
Status: UNCONFIRMED → NEW
Component: Untriaged → CSS Parsing and Computation
Ever confirmed: true
Product: Firefox → Core
Flags: needinfo?(emilio)

Set release status flags based on info from the regressing bug 1876541

Attached file Reduced test-case.
Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/54006 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 143 Branch
Upstream PR merged by moz-wptsync-bot

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

I think the fix is trivial-ish but it's an old regression, so...

Flags: needinfo?(emilio)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: