Bug 1979533 - Don't double-account for CSS zoom in generated content images. r=dshin

Differential Revision: https://phabricator.services.mozilla.com/D258830