layout/style/nsStyleStruct.cpp
@@ -1717,7 +1717,8 @@ void StyleImage::ResolveImage(Document& aDoc, const StyleImage* aOld) {
 }
 
 template <>
-ImageResolution StyleImage::GetResolution(const ComputedStyle& aStyle) const {
+ImageResolution StyleImage::GetResolution(
+    const ComputedStyle* aStyleForZoom) const {
   ImageResolution resolution;
   if (imgRequestProxy* request = GetImageRequest()) {
     RefPtr<imgIContainer> image;
@@ -1734,8 +1735,8 @@ ImageResolution StyleImage::GetResolution(const ComputedStyle& aStyle) const {
       resolution.ScaleBy(r);
     }
   }
-  if (aStyle.EffectiveZoom() != StyleZoom::ONE) {
-    resolution.ScaleBy(1.0f / aStyle.EffectiveZoom().ToFloat());
+  if (aStyleForZoom && aStyleForZoom->EffectiveZoom() != StyleZoom::ONE) {
+    resolution.ScaleBy(1.0f / aStyleForZoom->EffectiveZoom().ToFloat());
   }
   return resolution;
 }
